# detection_utils

./: .gitignore  .pre-commit-config.yaml  README.md  analysis.py
model_evaluator/: package.xml  setup.cfg  setup.py
model_evaluator/launch/: launch.xml  model_evaluator_yolox_s.launch.xml  model_evaluator_yolox_tiny.launch.xml  yolox_s_plus_opt.param.yaml  yolox_tiny.param.yaml
model_evaluator/model_evaluator/: cv2_bbox_annotator.py  dataset_reader.py  detection.py  inference_connector.py  lidar_connector.py  metrics_calculator.py  model_evaluator.py  rosbag_reader.py  waymo_reader.py  yolox_connector.py
model_evaluator/model_evaluator/bbox_generator/: generator.py  keyframe_interpolator.py  static_vehicle_boxes.json  yaw_converter.py
model_evaluator/model_evaluator/bbox_generator/keyframes/: 10m_1_ped_0.json  10m_1_ped_bike_2.json  10m_2_ped_0.json  (+14 more)
model_evaluator/model_evaluator/connectors/: lidar_connector.py  yolox_connector.py
model_evaluator/model_evaluator/interfaces/: dataset_reader.py  detection2D.py  detection3D.py  inference_connector.py  labels.py
model_evaluator/model_evaluator/offline_analysis/: 3d_offline_analyser.py
model_evaluator/model_evaluator/readers/: kb_rosbag_reader.py  rosbag_reader.py  waymo_reader.py
model_evaluator/model_evaluator/run_types/: camera_run.py  lidar_run.py
model_evaluator/model_evaluator/utils/: cv2_bbox_annotator.py  decoders.py  json_file_reader.py  kb_rosbag_matcher.py  keypoint_matching.py  metrics.py  metrics_calculator.py  pointcloud_visualiser.py  video_writer.py  waymo_pointcloud_handler.py
(+2 files in other folders)
