<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>model_evaluator</name>
  <version>0.0.1</version>
  <description>Package for evaluation of Autoware detection models</description>
  <maintainer email="j.schulte-1@sms.ed.ac.uk">Julius Schulte</maintainer>
  <maintainer email="callumsturnbull@hotmail.co.uk">Callum Turnbull</maintainer>
  <license>TODO: License declaration</license>

  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>rclpy</depend>
  <depend>ros_numpy</depend>
  <depend>rosbag2_py</depend>
  <depend>rosbag2_storage_mcap</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tier4_perception_msgs</depend>
  <!-- <depend>python3-waymo-open-dataset-tf-2-6-0-pip</depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
